// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Fix: Init-Task > preFlightCheck "base-ts" - deps/devDeps compare 1`] = `""`;

exports[`Fix: Init-Task > preFlightCheck "base-ts" - expect failure deps missing 1`] = `
"Please install the following missing devDependencies and try again:
\\"typescript\\": \\"^4.9.0\\", 
\\"prettier\\": \\"^2.0.0\\", 
\\"eslint\\": \\"^8.0.0\\""
`;

exports[`Fix: Init-Task > preFlightCheck "base-ts" - expect failure deps missing 2`] = `""`;

exports[`Fix: Init-Task > preFlightCheck "base-ts" - expect failure eslint parser invalid 1`] = `"Please update the parser to \\"@typescript-eslint/parser\\" in the ESLint config and try again."`;

exports[`Fix: Init-Task > preFlightCheck "base-ts" - expect failure eslint parser invalid 2`] = `""`;

exports[`Fix: Init-Task > preFlightCheck "base-ts" - expect failure tsconfig strict as false 1`] = `
"please update the tsconfig.json to meet requirements:
{
  \\"compilerOptions\\": {
    \\"strict\\": true,
    \\"skipLibCheck\\": true
  }
}"
`;

exports[`Fix: Init-Task > preFlightCheck "base-ts" - expect failure tsconfig strict as false 2`] = `""`;

exports[`Fix: Init-Task > preFlightCheck "base-ts" works 1`] = `""`;

exports[`Fix: Init-Task > preFlightCheck "ember" - expect failure tsconfig glint missing 1`] = `
"\\"glint\\" key and options missing in tsconfig.json. please update the tsconfig.json to meet requirements:
{
  \\"compilerOptions\\": {
    \\"strict\\": true,
    \\"skipLibCheck\\": true
  },
  \\"glint\\": {
    \\"environment\\": \\"ember-loose\\"
  }
}"
`;

exports[`Fix: Init-Task > preFlightCheck "ember" - expect failure tsconfig glint missing 2`] = `""`;

exports[`Fix: Init-Task > preFlightCheck "ember" works 1`] = `""`;

exports[`Fix: Init-Task > preFlightCheck "glimmer" works 1`] = `""`;

exports[`Fix: Init-Task > validate initTask "base-ts" works with src arg 1`] = `
[
  "<tmp-path>/src/app.ts",
  "<tmp-path>/src/apply-rules.ts",
  "<tmp-path>/src/gen-random-grid.ts",
  "<tmp-path>/src/get-live-neighbor-count.ts",
]
`;

exports[`Fix: Init-Task > validate initTask "base-ts" works with src arg 2`] = `
[
  "src/app.ts",
  "src/apply-rules.ts",
  "src/gen-random-grid.ts",
  "src/get-live-neighbor-count.ts",
]
`;

exports[`Fix: Init-Task > validate initTask "base-ts" works with src arg 3`] = `
"[STARTED] Initialize
[SUCCESS] Initialize"
`;
